[gd_scene load_steps=5 format=3 uid="uid://dkvkex8d2rkwl"]

[ext_resource type="Script" path="res://Scripts/FrozenArrow.gd" id="1_w145p"]
[ext_resource type="PackedScene" uid="uid://h86gxdxfdn2i" path="res://Sprites/Arrow.aseprite" id="2_tqai0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yh660"]
size = Vector2(27, 11.5664)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_su5ns"]
size = Vector2(29, 14)

[node name="Arrow" type="CharacterBody2D"]
process_mode = 1
modulate = Color(0, 1, 1, 1)
collision_layer = 98304
collision_mask = 98304
script = ExtResource("1_w145p")

[node name="Arrow" parent="." instance=ExtResource("2_tqai0")]
process_mode = 1
scale = Vector2(1.5, 1.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
process_mode = 1
visible = false
position = Vector2(2.5, -0.754131)
scale = Vector2(1, 1.08)
shape = SubResource("RectangleShape2D_yh660")

[node name="Area2D" type="Area2D" parent="."]
process_mode = 1
visible = false
collision_layer = 98305
collision_mask = 98305

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
process_mode = 1
position = Vector2(2.5, -1)
shape = SubResource("RectangleShape2D_su5ns")

[node name="Timer" type="Timer" parent="."]
process_mode = 1
wait_time = 3.0

[node name="_Gravity_" type="Timer" parent="."]
process_mode = 1
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="_Gravity_" to="." method="_on__gravity__timeout"]
